# a2a-protocol-mcp-server

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  server.py
src/tools/: __init__.py  a2a.py  a2a_store.py
