[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2a-protocol-mcp-server"
version = "0.1.0"
description = "Bridge MCP with Google Agent2Agent Protocol — agent discovery, task delegation, A2A communication"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "AiAgentKarl"}
]
keywords = ["mcp", "a2a", "agent2agent", "google", "agent", "protocol", "ai", "communication"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AiAgentKarl/a2a-protocol-mcp-server"
Repository = "https://github.com/AiAgentKarl/a2a-protocol-mcp-server"
Issues = "https://github.com/AiAgentKarl/a2a-protocol-mcp-server/issues"

[project.scripts]
a2a-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
